Formatted everything